--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <main class="container">
+    <main class="container" role="main">
       <picture>
         <source
           media="(max-width: 799px)"
@@ -42,10 +42,10 @@
         />
         <img
           src="./images/image-product-desktop.jpg"
-          alt="Chris standing up holding his daughter Elva"
+          alt="İmage Product Design"
         />
       </picture>
-      <div class="content">
+      <article class="content">
         <p class="label">Perfume</p>
         <h1 class="header">Gabrielle Essence Eau De Parfum</h1>
         <p class="text">
@@ -63,12 +63,12 @@
               fill="#FFF"
             />
           </svg>
-          <span> Add to Cart</span>
+          <span>Add to Cart</span>
         </button>
-      </div>
+      </article>
     </main>
 
-    <footer class="attribution">
+    <footer class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
